@@ -22,14 +22,14 @@ def fetchMMS(id):
             break
 
 def genYAML(data):
-    if 'content' in data:
+    if 'category' in data:
         if 'title' in data: print 'title: ' + data['title'].encode('utf-8')
         if 'url' in data: print 'url: ' + data['url']
-        print 'content:'
-        for item in data['content']:
-            print '- category: ' + item['category'].encode('utf-8')
+        print 'category:'
+        for category in data['category']:
+            print '- category: ' + category['title'].encode('utf-8')
             print '  channel:'
-            for channel in item['channel']:
+            for channel in category['channel']:
                 print "  - title: %s" % channel['title'].encode('utf-8')
                 print "    id: %d" % channel['id']
                 if 'url' in channel:
@@ -38,16 +38,16 @@ def genYAML(data):
                     print "    url: %s" % fetchMMS(channel['id'])
 
 def genJSON(data):
-    if 'content' in data:
+    if 'category' in data:
         print '({'
         if 'title' in data: print '\t"title": "%s",' % (data['title'].encode('utf-8'))
         if 'url' in data: print '\t"url": "%s",' % (data['url'])
-        print '\t"content": ['
-        for item in data['content']:
+        print '\t"category": ['
+        for category in data['category']:
             print '\t\t{'
-            print '\t\t\t"category": "%s",' % (item['category'].encode('utf-8'))
+            print '\t\t\t"title": "%s",' % (category['title'].encode('utf-8'))
             print '\t\t\t"channel": ['
-            for channel in item['channel']:
+            for channel in category['channel']:
                 print '\t\t\t\t{'
                 print '\t\t\t\t\t"title": "%s",' % (channel['title'].encode('utf-8'))
                 print '\t\t\t\t\t"id": "%d",' % (channel['id'])
