@@ -3,6 +3,11 @@
 	* utils/hichannel.html,
 	utils/hichannel.json,
 	utils/hichannel.py: Add new mechanism about JSON.
+	* utils/hichannel.html,
+	utils/hichannel.json,
+	utils/hichannel.py,
+	utils/hichannel.yaml,
+	utils/player.html: Add audio player of HTML5 and adjust data format.
 
 2010-01-03  Shih-Yuan Lee (FourDollars) <fourdollars@gmail.com>
 
